--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Cool website</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="./icons/logo-16.png" type="image/x-icon">
 </head>
+
 <body>
     <nav>
-        <a href=""><img src="" alt="Light Bench"></a>
-        <a href="">關於我們<br>About</a>
-        <a href="">服務介紹<br>Service</a>
-        <a href="">聯絡我們<br>Contact</a>
+        <a id="nav-logo" href="#">
+            <img src="./icons/logo-64.png" alt="Light Bench">
+            Light Bench
+        </a>
+        <div id="nav-hbg"></div>
+        <div id="nav-link-wrap">
+            <a href="">關於我們<br>About</a>
+            <a href="">服務介紹<br>Service</a>
+            <a href="">聯絡我們<br>Contact</a>
+        </div>
     </nav>
 </body>
+
 </html>
