--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </a>
         <div id="nav-hbg"></div>
         <div id="nav-link-wrap">
-            <a href="">關於我們<br>About</a>
-            <a href="">服務介紹<br>Service</a>
-            <a href="">聯絡我們<br>Contact</a>
+            <a href="#">關於我們<br>About</a>
+            <a href="#">服務介紹<br>Service</a>
+            <a href="#">聯絡我們<br>Contact</a>
         </div>
     </nav>
+    #slogan>
 </body>
 
 </html>
