--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="clearfix">
         <a id="nav-logo" href="#">
             <img src="./icons/logo-64.png" alt="Light Bench">
             Light Bench
@@ -23,7 +23,9 @@
             <a href="#">聯絡我們<br>Contact</a>
         </div>
     </nav>
-    #slogan>
+    <div id="slogan">
+        <h1>不只照亮，更要讓你發光</h1>
+    </div>
 </body>
 
 </html>
