--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Cool website</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./icons/logo-16.png" type="image/x-icon">
 </head>
 
@@ -25,6 +25,15 @@
     </nav>
     <div id="slogan">
         <h1>不只照亮，更要讓你發光</h1>
+    </div>
+    <div id="bubbles">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
+        <img src="/img/bubble.png" alt="">
     </div>
 </body>
 
