建立泡泡動畫效果

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </a>
         <div id="nav-hbg"></div>
         <div id="nav-link-wrap">
-            <a href="#">關於我們<br>About</a>
-            <a href="#">服務介紹<br>Service</a>
-            <a href="#">聯絡我們<br>Contact</a>
+            <a href="javascript:void(0)">關於我們<br>About</a>
+            <a href="javascript:void(0)">服務介紹<br>Service</a>
+            <a href="javascript:void(0)">聯絡我們<br>Contact</a>
         </div>
     </nav>
     <div id="slogan">
