--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <h1>不只照亮，更要讓你發光</h1>
     </div>
     <div id="bubbles">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
-        <img src="/img/bubble.png" alt="">
+        <img src="./img/bubble.png" alt="泡泡 1">
+        <img src="./img/bubble.png" alt="泡泡 2">
+        <img src="./img/bubble.png" alt="泡泡 3">
+        <img src="./img/bubble.png" alt="泡泡 4">
+        <img src="./img/bubble.png" alt="泡泡 5">
+        <img src="./img/bubble.png" alt="泡泡 6">
+        <img src="./img/bubble.png" alt="泡泡 7">
     </div>
 </body>
 
