--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div id="slogan">
+        <h1>不只照亮，更要讓你發光</h1>
+        <!-- 擺這，是為了方便被遮住 -->
+    </div>
     <nav class="clearfix">
         <a id="nav-logo" href="#">
             <img src="./icons/logo-64.png" alt="Light Bench">
@@ -23,18 +27,19 @@
             <a href="javascript:void(0)">聯絡我們<br>Contact</a>
         </div>
     </nav>
-    <div id="slogan">
-        <h1>不只照亮，更要讓你發光</h1>
-    </div>
+    
     <div id="bubbles">
-        <img src="./img/bubble.png" alt="泡泡 1">
-        <img src="./img/bubble.png" alt="泡泡 2">
-        <img src="./img/bubble.png" alt="泡泡 3">
-        <img src="./img/bubble.png" alt="泡泡 4">
-        <img src="./img/bubble.png" alt="泡泡 5">
-        <img src="./img/bubble.png" alt="泡泡 6">
-        <img src="./img/bubble.png" alt="泡泡 7">
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
+        <img src="./img/bubble.png" />
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
